*fixed other bug
