# internal/http/docs/swagger.json
@@ -937,12 +937,6 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Quantity",
-                        "name": "quantity",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
                         "description": "Limit",
                         "name": "limit",
                         "in": "query"
@@ -1254,14 +1248,14 @@
                 }
             }
         },
-        "/v1/product/by-category/{id}": {
+        "/v1/product/by-category/{category_id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get an Product by User ID",
+                "description": "Get a Product by Category ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1271,7 +1265,7 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Get Product By User ID",
+                "summary": "Get Product By Category ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -1494,18 +1488,6 @@
                         "type": "integer",
                         "description": "Name",
                         "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Price",
-                        "name": "price",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Stock",
-                        "name": "stock",
                         "in": "query"
                     },
                     {
@@ -1930,7 +1912,7 @@
                     "type": "string"
                 },
                 "cart_number": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "created_at": {
                     "type": "string"
@@ -1981,7 +1963,7 @@
                     "type": "string"
                 },
                 "cart_number": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
